<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/AppToolBar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:expandedTitleMarginStart="@dimen/expanded_toolbar_title_margin_start"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_collapseMode="parallax"
                        android:background="@drawable/header_bg"
                        app:layout_collapseParallaxMultiplier="0.5">
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:background="@drawable/header_gradient_overlay">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_height="@dimen/avatar_sqr"
                            android:layout_width="@dimen/avatar_sqr"
                            android:layout_marginTop="?attr/actionBarSize"
                            android:src="@drawable/avatar"
                            app:civ_border_width="0dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/h4"
                            android:layout_marginTop="@dimen/vertical_spacing_normal"
                            android:textColor="@color/solid_white"
                            android:text="@string/full_name"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/p"
                            android:text="@string/position"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/ps"
                            android:text="@string/company"
                            />
                    </LinearLayout>
                    <RelativeLayout
                        android:id="@+id/gradient_bg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/header_gradient"
                        tools:visibility="gone"
                        android:alpha="0">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:layout_alignParentBottom="true"
                            android:textColor="@color/solid_white"
                            android:text="@string/full_name"
                            android:gravity="center"
                            android:textSize="@dimen/p"
                            />
                    </RelativeLayout>

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:paddingTop="@dimen/vertical_spacing_small"
                            android:paddingBottom="@dimen/vertical_spacing_small"
                            android:paddingLeft="@dimen/horizontal_spacing_small"
                            android:paddingRight="@dimen/horizontal_spacing_small"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_weight="1">
                            11<TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_primary"
                                android:drawableLeft="@drawable/time"
                                android:drawablePadding="@dimen/icon_padding"
                                android:textSize="@dimen/h1"
                                android:text="6"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/pxs"
                                android:text="@string/work_year_caption"/>
                        </LinearLayout>
                        <View
                            android:layout_width="@dimen/line"
                            android:layout_height="match_parent"
                            android:background="@color/divider"/>
                        <LinearLayout
                            android:paddingTop="@dimen/vertical_spacing_small"
                            android:paddingBottom="@dimen/vertical_spacing_small"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/horizontal_spacing_small"
                            android:paddingRight="@dimen/horizontal_spacing_small"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_primary"
                                android:drawableLeft="@drawable/project"
                                android:drawablePadding="@dimen/icon_padding"
                                android:textSize="@dimen/h1"
                                android:text="6"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/pxs"
                                android:text="@string/projects_caption"/>
                        </LinearLayout>
                        <View
                            android:layout_width="@dimen/line"
                            android:layout_height="match_parent"
                            android:background="@color/divider"/>
                        <LinearLayout
                            android:paddingTop="@dimen/vertical_spacing_small"
                            android:paddingBottom="@dimen/vertical_spacing_small"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/horizontal_spacing_small"
                            android:paddingRight="@dimen/horizontal_spacing_small"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_primary"
                                android:textSize="@dimen/h1"
                                android:drawableLeft="@drawable/award"
                                android:drawablePadding="@dimen/icon_padding"
                                android:text="2"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/pxs"
                                android:text="@string/award_caption"/>
                        </LinearLayout>
                    </LinearLayout>
                    <include layout="@layout/section_divider" />
                    <!--<android.support.design.widget.TextInputLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content">-->

                        <!--<EditText-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:hint="Username" />-->
                    <!--</android.support.design.widget.TextInputLayout>-->

                    <!--<android.support.design.widget.TextInputLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content">-->

                        <!--<EditText-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:hint="Password" />-->
                    <!--</android.support.design.widget.TextInputLayout>-->

                    <!--<include layout="@layout/long_content"/>-->

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1000dp"
                        android:background="#FFAFAF"/>

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </android.support.design.widget.CoordinatorLayout>



        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/line"-->
            <!--android:background="@color/divider"/>-->

        <!--<android.support.design.widget.TabLayout-->
            <!--android:id="@+id/tab_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="56dp"-->
            <!--android:background="@color/solid_white" />-->

    </LinearLayout>


</android.support.v4.widget.DrawerLayout>